--- a/contact/index.html
+++ b/contact/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   
-    <title>Contact :: Bozzlab</title>
+    <title>Contact :: Bozzlab — Personal Website</title>
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -25,7 +25,7 @@
 
 
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="Contact :: Bozzlab — " />
+<meta name="twitter:title" content="Contact :: Bozzlab — Personal Website" />
 <meta name="twitter:description" content=".fa { padding: 20px; font-size: 30px; width: 30px; text-align: center; text-decoration: none; margin: 5px 2px; border-radius: 50%; }
 .fa:hover { opacity: 0.5; }
 .fa-facebook { background: #3B5998; color: white; }" />
@@ -36,7 +36,7 @@
 
 <meta property="og:locale" content="en" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="Contact :: Bozzlab — ">
+<meta property="og:title" content="Contact :: Bozzlab — Personal Website">
 <meta property="og:description" content=".fa { padding: 20px; font-size: 30px; width: 30px; text-align: center; text-decoration: none; margin: 5px 2px; border-radius: 50%; }
 .fa:hover { opacity: 0.5; }
 .fa-facebook { background: #3B5998; color: white; }" />
