--- a/contact/index.html
+++ b/contact/index.html
@@ -201,6 +201,26 @@
 
     
 
+<script id="dsq-count-scr" src="//bozzlab-github-io.disqus.com/count.js" async></script>
+<div id="disqus_thread"></div>
+<script>
+
+
+
+
+
+(function() { 
+var d = document, s = d.createElement('script');
+s.src = 'https://bozzlab-github-io.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+
+
+
+
+
     </div>
 
   </div>
