add dcomment section by disqus

--- a/profile/index.html
+++ b/profile/index.html
@@ -318,8 +318,8 @@ Other {
           
           
             <span class="button next">
-              <a href="/test/">
-                <span class="button__text">/B</span>
+              <a href="/archive/">
+                <span class="button__text">Article/Blog</span>
                 <span class="button__icon">→</span>
               </a>
             </span>
