--- a/profile/index.html
+++ b/profile/index.html
@@ -214,16 +214,16 @@ Programing {
 }
 
 Database { 
-    Relational : PostgreSQL, Redis, SQLite, MySQL
+    Relational : PostgreSQL, SQLite, MySQL, Db2
 }
 
 Framework/Libraries {
-    Framework: Flask, Django, Odoo/OpenERP, Hugo
+    Framework: Django, Flask, Odoo/OpenERP, Hugo
 }
 
 Enviroments/Tools {
     Operation_System: Linux/Ubuntu, Windows
-    Tools: Docker, Kafka, Jupyter Notebook, Git, Colab
+    Tools: Docker, Jupyter Notebook, Git, Colab
 }
 
 Cloud {
@@ -232,7 +232,7 @@ Cloud {
 
 Other {
     Familir_with: Alige Method, Data Pipeline, ERP Business Flow 
-    Course: Unit-Testing, Data Science, Machine Learning, Embedded System
+    Course: Data Science, Machine Learning, Embedded System
 }
 </code></pre>
 
