--- a/profile/index.html
+++ b/profile/index.html
@@ -210,7 +210,7 @@ Programing {
 }
 
 Database { 
-    Relational : PostgreSQL, SQLite, MySQL, Db2
+    Relational : PostgreSQL, SQLite, InfluxDB, MySQL, Db2
 }
 
 Framework/Libraries {
