--- a/profile/index.html
+++ b/profile/index.html
@@ -210,11 +210,13 @@ Programing {
 }
 
 Database { 
-    Relational : PostgreSQL, SQLite, InfluxDB, MySQL, Db2
+    Relational: PostgreSQL, SQLite, MySQL, Db2
+    Time-series: InfluxDB
 }
 
 Framework/Libraries {
     Framework: Django, Flask, Odoo/OpenERP, Hugo
+    Libraries: Numpy, Pandas, OpenCV
 }
 
 Enviroments/Tools {
