--- a/profile/index.html
+++ b/profile/index.html
@@ -221,7 +221,7 @@ Framework/Libraries {
 
 Enviroments/Tools {
     Operation_System: Linux/Ubuntu, Windows
-    Tools: Docker, Jupyter Notebook, Git, Colab
+    Tools: Docker, Jupyter Notebook, VirutalEnv, Pipenv, Git, Colab
 }
 
 Cloud {
@@ -238,6 +238,16 @@ Other {
 
 <pre><code class="language-Python">class Certificate(self):
 
+    def Python_Data_Structure(University_of_Michigan_on_Coursera):  
+        self.Cert = &quot;Python Data Structure&quot;
+        self.Academy = &quot;&quot;&quot; University of Michigan on Coursera &quot;&quot;&quot;
+        self.date = datetime.datetime(2019, 06)
+
+    def Python_Programming(University_of_Michigan_on_Coursera):  
+        self.Cert = &quot;Python Programming&quot;
+        self.Academy = &quot;&quot;&quot; University of Michigan on Coursera &quot;&quot;&quot;
+        self.date = datetime.datetime(2019, 03)
+
     def Diploma_in_Financial_Management(IBM_Institute):
         self.Cert = &quot;Diploma in Financial Management&quot;
         self.Academy = &quot;&quot;&quot; IBM Institute &quot;&quot;&quot; 
@@ -246,12 +256,8 @@ Other {
     def IBM_Data_Science_Professional_Certificate(IBM_on_Coursera):  
         self.Cert = &quot;IBM Data Science Professional Certificate&quot;
         self.Academy = &quot;&quot;&quot; IBM on Coursera &quot;&quot;&quot;    
-        self.date = datetime.datetime(2019, 03)
-
-    def Python_Programming(University_of_Michigan_on_Coursera):  
-        self.Cert = &quot;Python Programming&quot;
-        self.Academy = &quot;&quot;&quot; University of Michigan on Coursera &quot;&quot;&quot;
         self.date = datetime.datetime(2018, 10)
+    
 
 ### For see formal certificate, Let's go to Linkedin.
 </code></pre>
