--- a/profile/index.html
+++ b/profile/index.html
@@ -211,9 +211,9 @@ Bangkok,Thailand</p>
 <pre><code class="language-css">@Skill(--Stack--)
 
 Programing {
-    Static: Go, C++
+    Static: C++, Go
     Dynamic: Python, Javascript
-    Script: MATLAB, Markdown, MQL4
+    Script: Markdown, MQL4, MATLAB
     Web: HTML, XML, CSS 
 }
 
@@ -229,11 +229,11 @@ Framework/Libraries {
 
 Enviroments/Tools {
     Operation_System: Linux/Ubuntu, Windows
-    Tools: Docker, Jupyter Notebook, VirutalEnv, Pipenv, Git, Colab
+    Tools: Docker, Jupyter Notebook, Cron, Pipenv, Git, Colab
 }
 
 Cloud {
-    Cloud_Computing: AWS, GCP, DigitalOcean
+    Cloud_Server: AWS, GCP, DigitalOcean
 }
 
 Other {
