--- a/profile/index.html
+++ b/profile/index.html
@@ -189,9 +189,9 @@ Bangkok,Thailand</p>
                       |and Cron Jobs on Ubuntu server (AWS). Implemented by Python, 
                       |PostgreSQL and Docker. 
                       |&gt; Research in robot trading system/frameworks field, 
-                      |such as Backtrader, Zipline 
+                      |such as Backtrader, Zipline, PyAlgoTrader. 
                       |&gt; Worked data engineering field. Implemented on Docker, 
-                      |Linux, InfluxDB and PostgreSQL
+                      |Linux, InfluxDB and PostgreSQL.
                       |
 ----------------------|----------------------------------------------------------
 &lt;Dec 2018 - Mar 2019&gt; • Software Developer @ &lt;Blue System Technology Co.,LTD&gt;
@@ -277,7 +277,7 @@ Other {
         self.date = datetime.datetime(2018, 10)
     
 
-### For see formal certificate, Let's go to Linkedin.
+###  See formal certificate, Let's go to Linkedin.
 </code></pre>
 
 <h4 id="award">Award</h4>
