--- a/profile/index.html
+++ b/profile/index.html
@@ -261,17 +261,20 @@ Other {
         self.Cert = &quot;Python Data Structure&quot;
         self.Academy = &quot;&quot;&quot; University of Michigan on Coursera &quot;&quot;&quot;
         self.date = datetime.datetime(2019, 06)
+        self.credential = 'https://tinyurl.com/yxtr9pvw'
 
     def Diploma_in_Financial_Management(IBM_Institute):
         self.Cert = &quot;Diploma in Financial Management&quot;
         self.Academy = &quot;&quot;&quot; IBM Institute &quot;&quot;&quot; 
         self.date = datetime.datetime(2019, 02)
+        self.credential = 'https://tinyurl.com/y5u88r92'
+        
 
     def IBM_Data_Science_Professional_Certificate(IBM_on_Coursera):  
         self.Cert = &quot;IBM Data Science Professional Certificate&quot;
         self.Academy = &quot;&quot;&quot; IBM on Coursera &quot;&quot;&quot;    
         self.date = datetime.datetime(2018, 10)
-    
+        self.credential = 'https://tinyurl.com/yx92yn6g'
 
 ###  See formal certificate, Let's go to Linkedin.
 </code></pre>
