--- a/profile/index.html
+++ b/profile/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   
-    <title>Profile :: Bozzlab — Personal Website</title>
+    <title>Profile :: Bozzlab</title>
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -26,7 +26,7 @@ Education [{ &amp;quot;Education&amp;quot; : { &amp;quot;Degree&amp;quot;: &amp;
 
 
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="Profile :: Bozzlab — Personal Website" />
+<meta name="twitter:title" content="Profile :: Bozzlab — " />
 <meta name="twitter:description" content="Peem Srinikorn Python/Back-End Developer.
 Bangkok,Thailand
      
@@ -38,7 +38,7 @@ Education [{ &amp;quot;Education&amp;quot; : { &amp;quot;Degree&amp;quot;: &amp;
 
 <meta property="og:locale" content="en" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="Profile :: Bozzlab — Personal Website">
+<meta property="og:title" content="Profile :: Bozzlab — ">
 <meta property="og:description" content="Peem Srinikorn Python/Back-End Developer.
 Bangkok,Thailand
      
