--- a/profile/index.html
+++ b/profile/index.html
@@ -197,10 +197,9 @@ Bangkok,Thailand</p>
 ----------------------|----------------------------------------------------------
 &lt;Dec 2018 - Mar 2019&gt; • Software Developer @ &lt;Blue System Technology Co.,LTD&gt;
                       |
-                      |&gt; Improving and optimize ERP system 
-                      |using Odoo/OpenERP frameworks. 
-                      |&gt; Understanding the Business flow. 
-                      |In the IT supply chain field.
+                      |&gt; Improving and optimize ERP system using Odoo/OpenERP. 
+                      |&gt; Understanding the Business flow. In the IT supply chain 
+                      |field.
                       |
 ----------------------|----------------------------------------------------------
 &lt;Nov 2018 - Dec 2018&gt; • Python Developer Intern @ &lt;Cons Robotics Co.,LTD&gt;  
@@ -227,6 +226,7 @@ Programing {
     Dynamic: Python, Javascript
     Script: Markdown, MQL4, MATLAB
     Web: HTML, XML, CSS 
+    Micro-controller: Arduino, MbedOS/ARM
 }
 
 Database { 
@@ -241,7 +241,7 @@ Framework/Libraries {
 
 Enviroments/Tools {
     Operation_System: Linux/Ubuntu, Windows
-    Tools: Docker, Jupyter Notebook, Cron, Pipenv, Git, Colab
+    Tools: Docker, Jupyter, Cron, Pipenv, Git, Colab
 }
 
 Cloud {
