--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
-
+  <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
+     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142851450-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-142851450-1');
+    </script> 
 </head>
 
 <body>
@@ -29,74 +36,58 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <!-- <a href="index.html" class="pl-md-0 p-3 text-light">Start</a> -->
-            <a href="https://medium.com/@p.srinikorn" class="p-3 text-decoration-none text-light">Blog</a>
-            <a href="#" class="p-3 text-decoration-none text-light">Profile</a>
+            <a href="index.html" class="pl-md-0 p-3 text-light">cd ~</a>
+            <a class="p-3 text-decoration-none text-light" data-toggle="modal" data-target="#link-to-medium"> ssh -i blog@Medium</a>
+            <a href="profile.html" class="p-3 text-decoration-none text-light">cd profile/</a>
           </div>
         </div>
       </nav>
-
     </div>
   </div>
 
-
-
-
-  <div class="jumbotron bg-transparent mb-0 radius-0">
-    <div class="container">
-      <div class="row">
-        <div class="col-9">
-          <h1 class="display-2">$ Bozzlab<span class="vim-caret"> _</span></h1>
-          <div class="lead mb-3 text-mono text-success">Bozzlab personal site</div>
-          <img src="./images/avatar-dark.jpg" width="400" height="400">
-        </div>
-        <div class="col-9">
-            &nbsp
-            &nbsp
-        <align="left">
-        &nbsp
-        &nbsp
-        <img src="./images/carbon (1).png" width="700" height="400">
-        </div>
-        <!-- &nbsp; -->
-        <!-- <p>xx</p> -->
-
-
-        <!-- <div class="text-mono">
-            <a href="#!" title="Download Theme" class="btn btn-success btn-shadow px-3 my-2 ml-0 text-left">
-              A Button
-            </a>
-            <a href="#!" class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">
-              Another Button
-            </a>
-          </div> -->
-
-        <!-- <div class="text-darkgrey text-mono my-2">Some muted text</div>
-
-          <p class="mt-5 text-grey text-spacey">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, dignissimos provident. Alias, aliquid,
-            cum cumque deleniti dignissimos eos exercitationem explicabo illum inventore laboriosam nihil nobis nostrum
-            praesentium recusandae sequi, sint!
-          </p> -->
+  <div class="modal fade" id="link-to-medium" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">bozzlab $ ssh -i blog@Medium</h5>
+        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">$ The authentication of host 'https://medium.com/@p.srinikorn' can't be established. 
+        RSA key footerprint is not HEX:6d656469756d. Are you sure you want to continue connecting (yes/no)?</div>
+      <div class="modal-footer">
+        <button class="ht-tm-element btn btn-lg btn-dark" type="button" data-dismiss="modal">no</button>
+        <a class="ht-tm-element btn btn-lg btn-dark" href="https://medium.com/@p.srinikorn">yes</a>
       </div>
     </div>
   </div>
-  </div>
-  </div>
+</div>
 
 
 
-  <div class="contact">
+
+  <div class="jumbotron bg-transparent mb-0 radius-0 ">
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-xl-6">
+          <h1 class="display-2">$ Bozzlab<span class="vim-caret"> _</span></h1>
+          <div class="lead mb-3 text-mono text-success">Bozzlab personal site</div>
+          <img src="./images/avatar-dark.jpg" width="350" height="350">
+        </div>
+      </div>
+    </div>
+  </div>
+ 
+  <div class="container py-5">
+      <div class="row">
+      <div class="col-xl-6">
           &nbsp;
           &nbsp;
           &nbsp;
-          &nbsp;         
           &nbsp;
-          &nbsp;
-          <a href="https://www.linkedin.com/in/bozzsrinikorn/" class="ht-tm-element btn btn-dark active">
+        <a href="https://www.facebook.com/bozzfunkyou/" class="ht-tm-element btn btn-dark active">
             <span class="fab fa-facebook fa-2x">
             </span>
           </a>
@@ -119,22 +110,24 @@
         </div>
       </div>
     </div>
-  </div>
 
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+</body>
+
+<footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
-</body>
+</footer>
 
 </html>
