[edit] profile.html

--- a/profile.html
+++ b/profile.html
@@ -92,7 +92,7 @@
                 <div class="card-body">
                     <blockquote class="card-blockquote">
                         <p><strong>Degree : </strong> Bachelor of Engineering, BE </p>
-                        <p><b>Institute : </b>King Mongkut's Institute Technology of Ladkrabang </p>
+                        <p><b>Institute : </b>King Mongkut's Institute Technology of Ladkrabang (KMITL)</p>
                     </blockquote>
                 </div>
             </div>
@@ -107,24 +107,24 @@
                     <blockquote class="card-blockquote">
                         <ul>
                             <li>
-                                <p>Software Engineer @ <strong>Quantera Co.,LTD</strong></p>
+                                <p><u>Software Engineer</u> @ <strong>Quantera Co.,LTD</strong></p>
                                 <i>May 2019 - Present</i>
                             </li>
                             <br>
                             <li>
-                                <p>Software Developer ( Part-time ) @ <strong>Blue System Technology Co.,LTD</strong>
+                                <p><u>Software Developer (Part-time)</u> @ <strong>Blue System Technology Co.,LTD</strong>
                                 </p>
                                 <i>Dec 2018 - Mar 2019</i>
                             </li>
                             <br>
                             <li>
-                                <p>Python Developer Intern @ <strong>Cons Robotics Co.,LTD</strong>
+                                <p><u>Python Developer Intern</u> @ <strong>Cons Robotics Co.,LTD</strong>
                                 </p>
                                 <i>Nov 2018 - Dec 2018</i>
                             </li>
                             <br>
                             <li>
-                                <p>Acoustics Engineer Intern @ <strong>Atkrist Co.,LTD</strong>
+                                <p><u>Acoustics Engineer Intern</u> @ <strong>Atkrist Co.,LTD</strong>
                                 </p>
                                 <i>Jun 2017 - Nov 2017</i>
                             </li>
