--- a/profile.html
+++ b/profile.html
@@ -57,8 +57,8 @@
                     </button>
                 </div>
                 <div class="modal-body">$ The authentication of host 'https://medium.com/@p.srinikorn' can't be
-                    established.
-                    RSA key footerprint is not HEX:6d656469756d. Are you sure you want to continue connecting (yes/no)?
+                    established. RSA key footerprint is not HEX:6d656469756d. Are you sure you want to continue
+                    connecting (yes/no)?
                 </div>
                 <div class="modal-footer">
                     <button class="ht-tm-element btn btn-lg btn-dark" type="button" data-dismiss="modal">no</button>
@@ -66,7 +66,6 @@
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
     <div class="container py-5">
@@ -112,7 +111,8 @@
                             </li>
                             <br>
                             <li>
-                                <p><u>Software Developer (Part-time)</u> @ <strong>Blue System Technology Co.,LTD</strong>
+                                <p><u>Software Developer (Part-time)</u> @ <strong>Blue System Technology
+                                        Co.,LTD</strong>
                                 </p>
                                 <i>Dec 2018 - Mar 2019</i>
                             </li>
@@ -184,21 +184,27 @@
                                 <ul>
                                     <li><b>Academy : </b> Linux Foundation</li>
                                     <li><b>Issued : </b> Aug 2019</li>
-                                    <a href="https://tinyurl.com/y4kdmarp"><li><b>See Credential</b></a></li>
-                                </ul>
-                            <li>Diploma in Financial Management
-                                <ul>
-                                    <li><b>Academy : </b> IBM Institute</li>
-                                    <li><b>Issued : </b> Feb 2019</li>
-                                    <a href="https://tinyurl.com/y5u88r92"><li><b>See Credential</b></a></li>
+                                    <a href="https://tinyurl.com/y4kdmarp">
+                                        <li><b>See Credential</b>
+                                    </a></li>
+                        </ul>
+                        <li>Diploma in Financial Management
+                            <ul>
+                                <li><b>Academy : </b> IBM Institute</li>
+                                <li><b>Issued : </b> Feb 2019</li>
+                                <a href="https://tinyurl.com/y5u88r92">
+                                    <li><b>See Credential</b>
+                                </a></li>
 
-                                </ul>
-                            <li>IBM Data Science Professional Certificate
-                                <ul>
-                                    <li><b>Academy : </b> IBM </li>
-                                    <li><b>Issued : </b> Oct 2018</li>
-                                    <a href="https://tinyurl.com/yx92yn6g"><li><b>See Credential</b></a></li>
-                                </ul>
+                        </ul>
+                        <li>IBM Data Science Professional Certificate
+                            <ul>
+                                <li><b>Academy : </b> IBM </li>
+                                <li><b>Issued : </b> Oct 2018</li>
+                                <a href="https://tinyurl.com/yx92yn6g">
+                                    <li><b>See Credential</b>
+                                </a></li>
+                        </ul>
                         </ul>
                     </blockquote>
                 </div>
