--- a/index.html
+++ b/index.html
@@ -9,24 +9,20 @@
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
   <link rel="stylesheet" href="css/bootstrap4-neon-glow.min.css">
-
-
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
-  <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
-     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142851450-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-142851450-1');
-    </script> 
+  <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142851450-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-142851450-1');
+  </script>
 </head>
 
 <body>
-
   <div class="navbar-dark text-white">
     <div class="container">
       <nav class="navbar px-0 navbar-expand-lg navbar-dark">
@@ -37,7 +33,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a href="index.html" class="pl-md-0 p-3 text-light">cd ~</a>
-            <a class="p-3 text-decoration-none text-light" data-toggle="modal" data-target="#link-to-medium"> ssh -i blog@Medium</a>
+            <a class="p-3 text-decoration-none text-light" data-toggle="modal" data-target="#link-to-medium"> ssh -i
+              blog@Medium</a>
             <a href="profile.html" class="p-3 text-decoration-none text-light">cd profile/</a>
           </div>
         </div>
@@ -46,24 +43,24 @@
   </div>
 
   <div class="modal fade" id="link-to-medium" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">bozzlab $ ssh -i blog@Medium</h5>
-        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-      </div>
-      <div class="modal-body">$ The authentication of host 'https://medium.com/@p.srinikorn' can't be established. 
-        RSA key footerprint is not HEX:6d656469756d. Are you sure you want to continue connecting (yes/no)?</div>
-      <div class="modal-footer">
-        <button class="ht-tm-element btn btn-lg btn-dark" type="button" data-dismiss="modal">no</button>
-        <a class="ht-tm-element btn btn-lg btn-dark" href="https://medium.com/@p.srinikorn">yes</a>
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">bozzlab $ ssh -i blog@Medium</h5>
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">$ The authentication of host 'https://medium.com/@p.srinikorn' can't be established.
+          RSA key footerprint is not HEX:6d656469756d. Are you sure you want to continue connecting (yes/no)?</div>
+        <div class="modal-footer">
+          <button class="ht-tm-element btn btn-lg btn-dark" type="button" data-dismiss="modal">no</button>
+          <a class="ht-tm-element btn btn-lg btn-dark" href="https://medium.com/@p.srinikorn">yes</a>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
 
 
@@ -79,37 +76,37 @@
       </div>
     </div>
   </div>
- 
+
   <div class="container py-5">
-      <div class="row">
+    <div class="row">
       <div class="col-xl-6">
-          &nbsp;
-          &nbsp;
-          &nbsp;
-          &nbsp;
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        &nbsp;
         <a href="https://www.facebook.com/bozzfunkyou/" class="ht-tm-element btn btn-dark active">
-            <span class="fab fa-facebook fa-2x">
-            </span>
-          </a>
-          &nbsp;
-          <a href="https://github.com/bozzlab" class="ht-tm-element btn btn-dark active">
-            <span class="fab fa-github fa-2x ">
-            </span>
-          </a>
-          &nbsp;
-          <a href="https://www.linkedin.com/in/bozzsrinikorn/" class="ht-tm-element btn btn-dark active">
-            <span class="fab fa-linkedin fa-2x">
-            </span>
-          </a>
-          &nbsp;
-          <a href="mailto:bozzlab.me@gmail.com" class="ht-tm-element btn btn-dark active">
-            <span class="fa fa-envelope fa-2x">
-            </span>
-          </a>
-          &nbsp;
-        </div>
+          <span class="fab fa-facebook fa-2x">
+          </span>
+        </a>
+        &nbsp;
+        <a href="https://github.com/bozzlab" class="ht-tm-element btn btn-dark active">
+          <span class="fab fa-github fa-2x ">
+          </span>
+        </a>
+        &nbsp;
+        <a href="https://www.linkedin.com/in/bozzsrinikorn/" class="ht-tm-element btn btn-dark active">
+          <span class="fab fa-linkedin fa-2x">
+          </span>
+        </a>
+        &nbsp;
+        <a href="mailto:bozzlab.me@gmail.com" class="ht-tm-element btn btn-dark active">
+          <span class="fa fa-envelope fa-2x">
+          </span>
+        </a>
+        &nbsp;
       </div>
     </div>
+  </div>
 
 
   <!-- Optional JavaScript -->
@@ -118,13 +115,13 @@
 </body>
 
 <footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
