--- a/profile.html
+++ b/profile.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-6">
-                    <h1 class="display-2">$ Bozzlab<span class="vim-caret"> _</span></h1>
+                    <h1 class="display-2">$ Bozzlab<span class="vim-caret">_</span></h1>
                     <div class="lead mb-3 text-mono text-success">Bozzlab personal site</div>
                     <img src="./images/avatar-dark.jpg" width="350" height="350">
                 </div>
@@ -144,7 +144,7 @@
                         <ul>
                             <li>Programming
                                 <ul>
-                                    <li><b>Dynamics : </b> Python, MQL4, Shell/Bash, MATLAB, Markdown, Javascript</li>
+                                    <li><b>Dynamics : </b> Python, MQL4, Shell/Bash, Markdown, Javascript,  MATLAB</li>
                                     <li><b>Statics : </b> Go, C++</li>
                                 </ul>
                             <li>Database
