[Edit] Profile Page

--- a/profile.html
+++ b/profile.html
@@ -80,7 +80,8 @@
         </div>
         <br>
         <h5 class="ht-tm-cat-title">Peem Srinikorn</h5>
-        <h7 class="ht-tm-cat-title">Python/Back-End Developer</h7>
+        <h7 class="ht-tm-cat-title">• Python/Back-End Developer</h7>  
+        <p>• Interested in DevOps, Data Engineering, Cloud Computing, IT Infrastructure</p>
         <br></br>
 
         <div class="ht-tm-codeblock ">
@@ -90,7 +91,7 @@
                 </div>
                 <div class="card-body">
                     <blockquote class="card-blockquote">
-                        <p><strong>Degree : </strong> Bachelor of Engineering, BE </p>
+                        <p><strong>Degree : </strong> Bachelor of Engineering, B.Eng </p>
                         <p><b>Institute : </b>King Mongkut's Institute Technology of Ladkrabang (KMITL)</p>
                     </blockquote>
                 </div>
@@ -106,27 +107,26 @@
                     <blockquote class="card-blockquote">
                         <ul>
                             <li>
-                                <p><u>Software Engineer</u> @ <strong>Quantera Co.,LTD</strong></p>
-                                <i>May 2019 - Present</i>
+                                <p><u>Software Engineer</u></p>
+                                <p><i>May 2019 - Present</i> @ Quantera Co.,LTD • Full-time </p>
                             </li>
                             <br>
                             <li>
-                                <p><u>Software Developer (Part-time)</u> @ <strong>Blue System Technology
-                                        Co.,LTD</strong>
-                                </p>
-                                <i>Dec 2018 - Mar 2019</i>
+                                <p><u>Software Developer</u></p>
+                                <p><i>Dec 2018 - Mar 2019</i> @ Blue System Technology Co.,LTD • Part-time </p>
                             </li>
                             <br>
                             <li>
-                                <p><u>Python Developer Intern</u> @ <strong>Cons Robotics Co.,LTD</strong>
+                                <p><u>Python Developer</u></p>
+                                <p><i>Nov 2018 - Dec 2018</i> @ Cons Robotics Co.,LTD • Internship </p>            
+                                <!-- <p><u>Python Developer Intern</u> @ <strong>Cons Robotics Co.,LTD</strong>
                                 </p>
-                                <i>Nov 2018 - Dec 2018</i>
+                                <i>Nov 2018 - Dec 2018</i> -->
                             </li>
                             <br>
                             <li>
-                                <p><u>Acoustics Engineer Intern</u> @ <strong>Atkrist Co.,LTD</strong>
-                                </p>
-                                <i>Jun 2017 - Nov 2017</i>
+                                <p><u>Acoustics Engineer</u></p>
+                                <p><i>Jun 2017 - Nov 2017</i> @ Atkrist Co.,LTD • Internship </p>  
                             </li>
                         </ul>
                     </blockquote>
@@ -144,26 +144,29 @@
                         <ul>
                             <li>Programming
                                 <ul>
-                                    <li><b>Dynamics : </b> Python, MQL4, Shell/Bash, Markdown, Javascript,  MATLAB</li>
-                                    <li><b>Statics : </b> Go, C++</li>
+                                    <li>Python, Golang, Javascript</li>
+                                    <li>MQL4, Shell/Bash, Markdown, MATLAB</li>
                                 </ul>
                             <li>Database
                                 <ul>
-                                    <li><b>SQL: </b> PostgreSQL, SQLite, MySQL </li>
-                                    <li><b>No-SQL : </b> Redis</li>
-                                    <li><b>Time-series : </b> InfluxDB</li>
+                                    <li>PostgreSQL, Redis, InfluxDB, SQLite </li>
                                 </ul>
                             <li>Framework/Libraries
                                 <ul>
-                                    <li><b>Web/API : </b> Flask, Hugo, Django, Odoo </li>
-                                    <li><b>Data Science/ML : </b> Numpy, Pandas, OpenCV</li>
+                                    <li>Flask, FastAPI, Vue.js, Hugo, Odoo </li>
+                                    <li>Numpy, Pandas</li>
                                 </ul>
-                            <li>Tools
+                            <li>Infrastructure/Cloud/Tools
                                 <ul>
-                                    <li><b>Infrastructure : </b> Docker, Kubernetes </li>
-                                    <li><b>Cloud : </b> Google Cloud, DigitalOcean</li>
-                                    <li><b>Operation System : </b>Ubuntu, Linux, Alpine</li>
-                                    <li><b>etc : </b> Git, Jupyter</li>
+                                    <li>Docker, Kubernetes </li>
+                                    <li>Google Cloud, DigitalOcean</li>
+                                    <li>Ubuntu, Linux, Alpine</li>
+                                    <li>Git, Jupyter</li>
+                                </ul>
+                            </li>
+                            <li>Other
+                                <ul>
+                                    <li>Data Science, CI/CD, ERP </li>
                                 </ul>
                             </li>
                         </ul>
