[Add] imc cert to profile.html

--- a/profile.html
+++ b/profile.html
@@ -119,9 +119,6 @@
                             <li>
                                 <p><u>Python Developer</u></p>
                                 <p><i>Nov 2018 - Dec 2018</i> @ Cons Robotics Co.,LTD • Internship </p>            
-                                <!-- <p><u>Python Developer Intern</u> @ <strong>Cons Robotics Co.,LTD</strong>
-                                </p>
-                                <i>Nov 2018 - Dec 2018</i> -->
                             </li>
                             <br>
                             <li>
@@ -189,25 +186,36 @@
                                     <li><b>Issued : </b> Aug 2019</li>
                                     <a href="https://tinyurl.com/y4kdmarp">
                                         <li><b>See Credential</b>
-                                    </a></li>
-                        </ul>
+                                    </a>
+                                </ul>                                    
+                            </li>
                         <li>Diploma in Financial Management
                             <ul>
                                 <li><b>Academy : </b> IBM Institute</li>
                                 <li><b>Issued : </b> Feb 2019</li>
                                 <a href="https://tinyurl.com/y5u88r92">
                                     <li><b>See Credential</b>
-                                </a></li>
-
-                        </ul>
+                                </a>
+                            </ul>
+                            </li>
                         <li>IBM Data Science Professional Certificate
                             <ul>
                                 <li><b>Academy : </b> IBM </li>
                                 <li><b>Issued : </b> Oct 2018</li>
                                 <a href="https://tinyurl.com/yx92yn6g">
                                     <li><b>See Credential</b>
-                                </a></li>
-                        </ul>
+                                </a>
+                            </ul>
+                            </li>
+                            <li>DevOps CI/CD with Jenkins & Docker
+                                <ul>
+                                    <li><b>Academy : </b> IMC Institute </li>
+                                    <li><b>Issued : </b> Sep 2019</li>
+                                    <a href="images/imc-cert.jpg">
+                                        <li><b>See Credential</b>
+                                    </a>
+                                </ul>
+                            </li>
                         </ul>
                     </blockquote>
                 </div>
