[Edit] Profile Page

--- a/profile.html
+++ b/profile.html
@@ -180,6 +180,24 @@
                 <div class="card-body">
                     <blockquote class="card-blockquote">
                         <ul>
+                            <li>Data Engineer with Python
+                                <ul>
+                                    <li><b>Academy : </b> DataCamp </li>
+                                    <li><b>Issued : </b> Mar 2020</li>
+                                    <a href="images/data-engineer.pdf">
+                                        <li><b>See Credential</b>
+                                    </a>
+                                </ul>
+                            </li>
+                            <li>DevOps CI/CD with Jenkins & Docker
+                                <ul>
+                                    <li><b>Academy : </b> IMC Institute </li>
+                                    <li><b>Issued : </b> Sep 2019</li>
+                                    <a href="images/imc-cert.jpg">
+                                        <li><b>See Credential</b>
+                                    </a>
+                                </ul>
+                            </li>
                             <li>Open Source Software Development Linux and Git
                                 <ul>
                                     <li><b>Academy : </b> Linux Foundation</li>
@@ -206,15 +224,6 @@
                                     <li><b>See Credential</b>
                                 </a>
                             </ul>
-                            </li>
-                            <li>DevOps CI/CD with Jenkins & Docker
-                                <ul>
-                                    <li><b>Academy : </b> IMC Institute </li>
-                                    <li><b>Issued : </b> Sep 2019</li>
-                                    <a href="images/imc-cert.jpg">
-                                        <li><b>See Credential</b>
-                                    </a>
-                                </ul>
                             </li>
                         </ul>
                     </blockquote>
