Add more info at /profile

--- a/profile.html
+++ b/profile.html
@@ -81,19 +81,27 @@
         <br>
         <h5 class="ht-tm-cat-title">Peem Srinikorn</h5>
         <h7 class="ht-tm-cat-title">• Python/Back-End Developer</h7>  
-        <p>• Interested in DevOps, Data Engineering, Cloud Computing, IT Infrastructure</p>
+        <p>• Interested in Data Analytics/Engineering, Software Development, Infrastructure Design, DevOps CI/CD</p>
         <br></br>
 
         <div class="ht-tm-codeblock ">
             <div class="card ht-tm-element">
                 <div class="card-header">
-                    <u>Education</u>
+                    Education
                 </div>
                 <div class="card-body">
-                    <blockquote class="card-blockquote">
-                        <p><strong>Degree : </strong> Bachelor of Engineering, B.Eng </p>
-                        <p><b>Institute : </b>King Mongkut's Institute Technology of Ladkrabang (KMITL)</p>
-                    </blockquote>
+                    <ul>
+                        <li>
+                            <p><u>Master Degree</u></p>
+                            <p>2020 - Present | Master of Science, M.Sc</p>
+                            <p>National Institute of Development Administration (NIDA)</p>
+                        </li>
+                        <li>
+                            <p><u>Bachelor Degree</u></p>
+                            <p>2014 - 2019 | Bachelor of Engineering, B.Eng</p>
+                            <p>King Mongkut's Institute Technology of Ladkrabang (KMITL)</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -101,29 +109,29 @@
         <div class="ht-tm-codeblock ">
             <div class="card ht-tm-element">
                 <div class="card-header">
-                    <u>Work Experience</u>
+                    Work Experience
                 </div>
                 <div class="card-body">
                     <blockquote class="card-blockquote">
                         <ul>
                             <li>
+                                <p><u>Data Engineer</u></p>
+                                <p>May 2020 - Present | Cloud Ace (Thailand) Co.,Ltd</p>
+                            </li>
+                            <br>
+                            <li>
                                 <p><u>Software Engineer</u></p>
-                                <p><i>May 2019 - Present</i> @ Quantera Co.,LTD • Full-time </p>
+                                <p>May 2019 - May 2020 | Quantera Co.,Ltd</p>
                             </li>
                             <br>
                             <li>
-                                <p><u>Software Developer</u></p>
-                                <p><i>Dec 2018 - Mar 2019</i> @ Blue System Technology Co.,LTD • Part-time </p>
+                                <p><u>Software Developer (Part-time)</u></p>
+                                <p>Dec 2018 - Mar 2019 | Blue System Technology Co.,Ltd</p>
                             </li>
                             <br>
                             <li>
-                                <p><u>Python Developer</u></p>
-                                <p><i>Nov 2018 - Dec 2018</i> @ Cons Robotics Co.,LTD • Internship </p>            
-                            </li>
-                            <br>
-                            <li>
-                                <p><u>Acoustics Engineer</u></p>
-                                <p><i>Jun 2017 - Nov 2017</i> @ Atkrist Co.,LTD • Internship </p>  
+                                <p><u>Acoustics Engineer (Intern) </u></p>
+                                <p>Jun 2017 - Nov 2017 | Atkrist Co.,Ltd</p>  
                             </li>
                         </ul>
                     </blockquote>
@@ -134,36 +142,37 @@
         <div class="ht-tm-codeblock ">
             <div class="card ht-tm-element">
                 <div class="card-header">
-                    <u>Skill/Stack</u>
+                    Skill/Stack
                 </div>
                 <div class="card-body">
                     <blockquote class="card-blockquote">
                         <ul>
                             <li>Programming
                                 <ul>
-                                    <li>Python, Golang, Javascript</li>
-                                    <li>MQL4, Shell/Bash, Markdown, MATLAB</li>
+                                    <li>Python, Golang, Javascript, MQL4</li>
+                                    <li>SQL, YAML, Markdown, Shell/Bash, MATLAB</li>
                                 </ul>
                             <li>Database
                                 <ul>
                                     <li>PostgreSQL, Redis, InfluxDB, SQLite </li>
+                                    <li>BigQuery, Firestore</li>
                                 </ul>
                             <li>Framework/Libraries
                                 <ul>
                                     <li>Flask, FastAPI, Vue.js, Hugo, Odoo </li>
-                                    <li>Numpy, Pandas</li>
+                                    <li>Apache Beam, Apache Spark, Numpy, Pandas</li>
                                 </ul>
                             <li>Infrastructure/Cloud/Tools
                                 <ul>
                                     <li>Docker, Kubernetes </li>
-                                    <li>Google Cloud, DigitalOcean</li>
-                                    <li>Ubuntu, Linux, Alpine</li>
-                                    <li>Git, Jupyter</li>
+                                    <li>Google Cloud (Expert), AWS, DigitalOcean</li>
+                                    <li>Linux (Ubuntu, Debian, Alpine)</li>
+                                    <li>Git, GitLab CI/CD, Jupyter, k6</li>
                                 </ul>
                             </li>
                             <li>Other
                                 <ul>
-                                    <li>Data Science, CI/CD, ERP </li>
+                                    <li>Data Pipeline, DevOps CI/CD, Software Development, ERP </li>
                                 </ul>
                             </li>
                         </ul>
@@ -175,11 +184,29 @@
         <div class="ht-tm-codeblock ">
             <div class="card ht-tm-element">
                 <div class="card-header">
-                    <u>Certificate</u>
+                    Certificate
                 </div>
                 <div class="card-body">
                     <blockquote class="card-blockquote">
                         <ul>
+                            <li>Google Cloud Certified - Professional Data Engineer
+                                <ul>
+                                    <li><b>Academy : </b> Google Cloud Platform </li>
+                                    <li><b>Issued : </b> July 2020</li>
+                                    <a href="https://www.credential.net/ca230cc7-939b-432c-93a4-b0dd08090c35">
+                                        <li><b>See Credential</b>
+                                    </a>
+                                </ul>
+                            </li>
+                            <li>Introduction to Data Studio
+                                <ul>
+                                    <li><b>Academy : </b> Google Analytics </li>
+                                    <li><b>Issued : </b> May 2020</li>
+                                    <a href="https://analytics.google.com/analytics/academy/certificate/P6yddRU0R1q6LLyBbVjXgg">
+                                        <li><b>See Credential</b>
+                                    </a>
+                                </ul>
+                            </li>
                             <li>Data Engineer with Python
                                 <ul>
                                     <li><b>Academy : </b> DataCamp </li>
@@ -234,7 +261,7 @@
         <div class="ht-tm-codeblock ">
             <div class="card ht-tm-element">
                 <div class="card-header">
-                    <u>Award</u>
+                    Award
                 </div>
                 <div class="card-body">
                     <blockquote class="card-blockquote">
