Add REST API cert hackerrank

--- a/profile.html
+++ b/profile.html
@@ -189,10 +189,19 @@
                 <div class="card-body">
                     <blockquote class="card-blockquote">
                         <ul>
+                            <li>REST API (Intermediate) Certificate
+                                <ul>
+                                    <li><b>Academy : </b> HackerRank </li>
+                                    <li><b>Issued : </b> Aug 2020</li>
+                                    <a href="https://www.hackerrank.com/certificates/a72f1c54f34f">
+                                        <li><b>See Credential</b>
+                                    </a>
+                                </ul>
+                            </li>
                             <li>Google Cloud Certified - Professional Data Engineer
                                 <ul>
                                     <li><b>Academy : </b> Google Cloud Platform </li>
-                                    <li><b>Issued : </b> July 2020</li>
+                                    <li><b>Issued : </b> Jul 2020</li>
                                     <a href="https://www.credential.net/ca230cc7-939b-432c-93a4-b0dd08090c35">
                                         <li><b>See Credential</b>
                                     </a>
