--- a/profile.html
+++ b/profile.html
@@ -80,7 +80,7 @@
         </div>
         <br>
         <h5 class="ht-tm-cat-title">Peem Srinikorn</h5>
-        <h7 class="ht-tm-cat-title">• Python/Back-End Developer</h7>  
+        <h7 class="ht-tm-cat-title">• Software/Data Engineer</h7>  
         <p>• Interested in Data Analytics/Engineering, Software Development, Infrastructure Design, DevOps CI/CD</p>
         <br></br>
 
