--- a/profile.html
+++ b/profile.html
@@ -207,6 +207,15 @@
                                     </a>
                                 </ul>
                             </li>
+                            <li>Data Engineering with Google Cloud
+                                <ul>
+                                    <li><b>Academy : </b> Google Cloud x Coursera </li>
+                                    <li><b>Issued : </b> Jun 2020</li>
+                                    <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/45CT4XZ4MSGF">
+                                        <li><b>See Credential</b>
+                                    </a>
+                                </ul>
+                            </li>
                             <li>Introduction to Data Studio
                                 <ul>
                                     <li><b>Academy : </b> Google Analytics </li>
