--- a/profile.html
+++ b/profile.html
@@ -81,7 +81,7 @@
         <br>
         <h5 class="ht-tm-cat-title">Peem Srinikorn</h5>
         <h7 class="ht-tm-cat-title">• Software/Data Engineer</h7>  
-        <p>• Interested in Data Analytics/Engineering, Software Development, Infrastructure Design, DevOps CI/CD</p>
+        <p>• Interested in Data Analytics/Engineering, Software Development, Infrastructure Design, Cloud Native, DevOps CI/CD</p>
         <br></br>
 
         <div class="ht-tm-codeblock ">
@@ -184,6 +184,15 @@
                 <div class="card-body">
                     <blockquote class="card-blockquote">
                         <ul>
+                            <li>Google Cloud Certified - Professional Cloud Architect
+                                <ul>
+                                    <li><b>Academy : </b> Google Cloud Platform </li>
+                                    <li><b>Issued : </b> Jul 2020</li>
+                                    <a href="https://www.credential.net/98e27dd6-fe4a-4be4-af56-f7db60354720">
+                                        <li><b>See Credential</b>
+                                    </a>
+                                </ul>
+                            </li>
                             <li>REST API (Intermediate) Certificate
                                 <ul>
                                     <li><b>Academy : </b> HackerRank </li>
