update medium URL

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
             <span aria-hidden="true">×</span>
           </button>
         </div>
-        <div class="modal-body">$ The authentication of host 'https://medium.com/@p.srinikorn' can't be established.
+        <div class="modal-body">$ The authentication of host 'https://p-srinikorn.medium.com/' can't be established.
           RSA key footerprint is not HEX:6d656469756d. Are you sure you want to continue connecting (yes/no)?</div>
         <div class="modal-footer">
           <button class="ht-tm-element btn btn-lg btn-dark" type="button" data-dismiss="modal">no</button>
-          <a class="ht-tm-element btn btn-lg btn-dark" href="https://medium.com/@p.srinikorn">yes</a>
+          <a class="ht-tm-element btn btn-lg btn-dark" href="https://p-srinikorn.medium.com/">yes</a>
         </div>
       </div>
     </div>
