--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </span>
         </a>
         &nbsp;
-        <a href="mailto:bozzlab.me@gmail.com" class="ht-tm-element btn btn-dark active">
+        <a href="mailto:peemsrinikorn@gmail.com" class="ht-tm-element btn btn-dark active">
           <span class="fa fa-envelope fa-2x">
           </span>
         </a>
